Upwork: fix invisible button text in Theme Showcase

--- a/client/my-sites/themes/theme-showcase.scss
+++ b/client/my-sites/themes/theme-showcase.scss
@@ -53,3 +53,7 @@
 .themes__hidden-content {
 	display: none;
 }
+
+.theme-showcase__all-themes .button.upwork-banner__cta {
+	color: inherit;
+}
